[tool.poetry]
name = "ai_image_frame"
version = "0.1.0"
description = ""
authors = ["Benjamin Weigang <benjamin.weigang@mailbox.org>"]

[tool.poetry.dependencies]
python = "^3.9"
dalle2 = "^1.0.9"
python-dotenv = "^0.20.0"
requests = "^2.28.1"
Pillow = "^9.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
