[tool.poetry]
name = "ai_image_frame"
version = "0.1.0"
description = ""
authors = ["Benjamin Weigang <benjamin.weigang@mailbox.org>"]

[tool.poetry.dependencies]
python = "^3.9"
dalle2 = "^1.0.9"
python-dotenv = "^0.20.0"
requests = "^2.28.1"
Pillow = "^9.2.0"
pvcheetah = "^1.1.1"
pvrecorder = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
ipdb = "^0.13.9"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run_image_frame_loop = 'ai_image_frame.run:run_main_loop'

[tool.isort]
line_length = 120

[tool.mypy]
python_version = "3.9"
strict = true
exclude = "dist"

[[tool.mypy.overrides]]
module = "dalle2" 
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "dotenv" 
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "inky" 
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "PIL" 
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pvcheetah" 
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pvrecorder" 
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "RPi.*" 
ignore_missing_imports = true
